--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@smooth-ui/core-sc": "^10.1.0",
+    "antd": "^3.20.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "formik": "^1.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-formik-ui": "^3.0.10",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
