--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-formik-ui": "^3.0.10",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
+    "sweetalert2": "^8.14.0",
+    "sweetalert2-react-content": "^1.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
