--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "antd": "^3.20.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "bootstrap-sweetalert": "^1.0.1",
     "formik": "^1.5.8",
+    "install": "^0.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-formik-ui": "^3.0.10",
